# trx

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  book.toml  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs.yml  release.yml
book/src/: SUMMARY.md  configuration.md  installation.md  introduction.md  roadmap.md  usage.md
book/src/architecture/: concurrency.md  fuzzy-search.md  overview.md  ui-rendering.md
book/src/backends/: apt.md  aur-yay.md  homebrew.md  index.md  new-backend.md  pacman.md
book/src/contributing/: coding-guidelines.md  index.md
docs/: CONFIGURATION.md
src/: config.rs  main.rs  updater.rs
src/fuzzy/: mod.rs
src/managers/: apt.rs  arch.rs  brew.rs  mod.rs  pacman.rs  yay.rs
src/ui/: app.rs  draw.rs
trx-web/: README.md  package.json
trx-web/docs/: README.md  architecture.md  commands.md  configuration.md  getting-started.md  performance.md
trx-web/src/app/: globals.css  landing-material.ts  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
trx-web/src/app/docs/: layout.tsx  page.tsx
trx-web/src/components/features/: BatchOpsCard.tsx  FuzzySearchCard.tsx  MultiManagerCard.tsx  ZeroRuntimeCard.tsx  index.tsx  shared.tsx
trx-web/src/components/hero/: dino-path.ts  index.tsx
trx-web/src/components/install/: FlowConnector.tsx  StepCard.tsx  index.tsx
trx-web/src/components/landing/: ConfigSnippet.tsx  CopyIconButton.tsx  DocCodeBlock.tsx  (+13 more)
trx-web/src/lib/: tokens.ts
trx-web/src/styles/: matrix-theme.css
(+6 files in other folders)
